cleanup pom