@@ -94,23 +94,11 @@
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy-agent</artifactId>
     </dependency>
-    <!-- region xjc -->
-    <dependency>
-      <groupId>jakarta.xml.bind</groupId>
-      <artifactId>jakarta.xml.bind-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
       <artifactId>jaxb-xjc</artifactId>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>codemodel</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <!-- endregion -->
     <!-- region logging dependencies -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -553,28 +541,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>jdk11-deps</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <properties>
-        <surefire.extra.args>--illegal-access=warn</surefire.extra.args>
-        <maven.compiler.release>8</maven.compiler.release>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <!-- testing under jigsaw will drive you mental, just disable this freak show until someone had a good idea on how to fix it -->
-              <useModulePath>false</useModulePath>
-            </configuration>
           </plugin>
         </plugins>
       </build>
